syntax = "proto3";

package es.eoloplant.weatherservice;

message GetWeatherRequest {
  string city = 1;
}
message GetWeatherResponse {
  string city = 1;
  string weather = 2;
}

service WeatherService {
    rpc GetWeather(GetWeatherRequest) returns (GetWeatherResponse);
}
